test/success/integration/_succ_type_value_1.hs
main = do
       let x :: [Int]
       print "hello"