test/fail/integration/_fail_grammar_type_list_1.hs
main = do
       let x :: [bool]
       print "hello"